# bedrud-android

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  NOTICE  README-OLD.md  README.md  build.gradle.kts  settings.gradle.kts
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
app/: build.gradle.kts  proguard-rules.pro
apps/desktop/: Cargo.toml
apps/desktop/installer/linux/: AppRun  bedrud-desktop.spec  bedrud.desktop
apps/desktop/installer/snap/: snapcraft.yaml
apps/desktop/installer/windows/: bedrud.nsi
apps/desktop/src/: app.rs  main.rs
apps/desktop/src/api/: admin.rs  auth.rs  client.rs  mod.rs  rooms.rs
apps/desktop/src/auth/: mod.rs  passkey.rs  session.rs
apps/desktop/src/livekit/: devices.rs  mod.rs  room.rs  tracks.rs
apps/desktop/src/store/: instance.rs  mod.rs  settings.rs
apps/desktop/src/ui/: bridge.rs
apps/desktop/ui/: app.slint  settings.slint  theme.slint
apps/desktop/ui/admin/: admin.slint  user_table.slint
apps/desktop/ui/auth/: login.slint  register.slint
apps/desktop/ui/components/: avatar.slint  button.slint  card.slint  input.slint
apps/desktop/ui/dashboard/: create_room_dialog.slint  dashboard.slint  room_card.slint
apps/desktop/ui/meeting/: chat_panel.slint  controls_bar.slint  meeting.slint  participant_tile.slint
docs/: README.md  project-tree.md
scripts/: dev-ports.sh  dev-stop-all.sh
server/: .air.toml  .env.example  .gitignore  .golangci.yml  .swaggo  README.md  config.local.yaml.example  go.mod  go.sum  (+4 more)
(+1499 files in other folders)
