[package]
name = "bedrud-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
toml = "0.9"
keyring = "3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
cpal = "0.17"

[build-dependencies]
slint-build = "1"

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
tempfile = "3"
